# svm_struct_crf

./: CMakeLists.txt  README.md  svm_struct_api.cpp  svm_struct_api.h  svm_struct_api_types.h
svm_struct/: svm_struct_learn.cpp
test/: CMakeLists.txt  sample_write_read.cpp
